Work on the navigation menu

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
     <title>NextStarz</title>
   </head>
-  <body>
+  <body class="bg-bg-color font-inter">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
