--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
-    <title>NextStarz- Be the next star</title>
+    <title>NextStarz | Be the next star</title>
   </head>
   <body class="bg-bg-color font-inter">
     <div id="root"></div>
