--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://js.paystack.co/v1/inline.js"></script>
     <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
     <title>NextStarz | Be the next star</title>
   </head>
