--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#6D28D9" />
+    <meta name="theme-color" content="#202020" />
 
     <title>
       NextStarz | Be The Next Big Star
@@ -14,7 +14,7 @@
     />
     <meta
       name="keywords"
-      content="talent show, music competition, Ghana auditions, singing contest, dance battle, comedy competition, beat-making, Suede Entertainment"
+      content="Ghana talent show, music competition Accra, singing auditions Ghana, dance competition 2025, comedy contest, beat-making competition, Suede Entertainment"
     />
 
     <!-- Favicon & App Icons -->
@@ -29,15 +29,15 @@
     <meta property="og:url" content="https://thenextstarz.com" />
     <meta
       property="og:title"
-      content="NextStarz| Be the Next Big Star"
+      content="NextStarz Talent Hunt 2025 | Ghana's Biggest Talent Competition"
     />
     <meta
       property="og:description"
-      content="Compete in the biggest talent hunt. Grand prize: Recording contract + GHS 10,000. Auditions open now!"
+      content="Audition for NextStarz 2025 - Win recording contracts, GHS 10,000 cash prize & global exposure. Singers, dancers, comedians & music producers welcome!"
     />
     <meta
       property="og:image"
-      content="https://thenextstarz.com/social-preview.jpg"
+      content="https://thenextstarz.com/src/assets/socials/social-preview.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -56,7 +56,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://thenextstarz.com/twitter-preview.jpg"
+      content="https://thenextstarz.com/src/assets/socials/twitter-preview.jpg"
     />
 
     <!-- Canonical URL -->
@@ -87,7 +87,7 @@
             "addressCountry": "GH"
           }
         },
-        "image": "https://thenextstarz.com/logo.jpg",
+        "image": "https://thenextstarz.com/src/assets/Logo.png",
         "description": "Annual talent competition for singers, dancers, comedians and music producers.",
         "performer": {
           "@type": "PerformingGroup",
