updated humburger menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content="https://thenextstarz.com" />
     <meta
       property="og:title"
-      content="NextStarz Talent Hunt 2025 | Ghana's Biggest Talent Competition"
+      content="NextStarz Talent Hunt 2025 | Ghana's Biggest Talent Discovery Platform"
     />
     <meta
       property="og:description"
