update login page

--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#202020" />
 
-    <title>
-      NextStarz | Be The Next Big Star
-    </title>
+    <title>NextStarz | Be The Next Big Star</title>
     <meta
       name="description"
-      content="Showcase your talent in singing, dance, comedy & music production. Win recording deals, cash prizes & global exposure. Register now for Ghana's biggest talent hunt!"
+      content="Showcase your talent in singing, rapping, reggae dance-hall & music production. Win recording deals, cash prizes & global exposure. Register now for Ghana's biggest talent hunt!"
     />
     <meta
       name="keywords"
-      content="Ghana talent show, music competition Accra, singing auditions Ghana, dance competition 2025, comedy contest, beat-making competition, Suede Entertainment"
+      content="Ghana talent show, music competition Accra, singing auditions Ghana, rapping competition 2025, reggae dance-hall contest, Suede Entertainment"
     />
 
     <!-- Favicon & App Icons -->
@@ -23,7 +21,7 @@
       href="./src/assets/favicon.ico"
       type="image/x-icon"
     />
-    
+
     <!-- Open Graph / Facebook (for social sharing) -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://thenextstarz.com" />
@@ -33,7 +31,7 @@
     />
     <meta
       property="og:description"
-      content="Audition for NextStarz 2025 - Win recording contracts, GHS 10,000 cash prize & global exposure. Singers, dancers, comedians & music producers welcome!"
+      content="Audition for NextStarz 2025 - Win recording contracts, GHS 300,000 cash prize & global exposure. Singers, rappers, reggae dance-hall & music producers welcome!"
     />
     <meta
       property="og:image"
@@ -52,7 +50,7 @@
     />
     <meta
       name="twitter:description"
-      content="Singers, dancers, comedians & songwriters – your chance to shine! Deadline: June 5, 2025."
+      content="Singers, rappers & reggae dance-hall – your chance to shine! Deadline: June 5, 2025."
     />
     <meta
       name="twitter:image"
@@ -61,13 +59,11 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://thenextstarz.com" />
-
   </head>
   <body class="bg-bg-color font-inter">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
-  
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -79,16 +75,16 @@
         "eventStatus": "https://schema.org/EventScheduled",
         "location": {
           "@type": "Place",
-          "name": "CJ Multimedia, Lapaz",
+          "name": "Class Media Group Headquarters, Labone-Accra",
           "address": {
             "@type": "PostalAddress",
-            "streetAddress": "Near Ashanti HomeTouch",
+            "streetAddress": "Near the American Embassy",
             "addressLocality": "Accra",
             "addressCountry": "GH"
           }
         },
         "image": "https://thenextstarz.com/src/assets/Logo.png",
-        "description": "Annual talent competition for singers, dancers, comedians and music producers.",
+        "description": "Annual talent competition for singers, rappers, reggae dance-hall and music producers.",
         "performer": {
           "@type": "PerformingGroup",
           "name": "Suede Entertainment"
